website/styles/cards.css
.card-container {
    position: relative;
    padding: 2rem;
}

.card {
    min-height: 150px;
    max-width: 85rem;
    min-width: 40rem;
    margin: 2.5rem auto;
}

.card-header {
    margin-bottom: 0.5rem;
    position: relative;
    font-size: 20px;
    vertical-align: middle;
}

.card-header-avatar {
    display: inline-block;
    float: left;
}

.card-header-info {
    display: inline-block;
    margin-top: 1px;
}

.card-header-title {
    font-size: 15px;
    font-weight: 500;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    color: #575757;
    float: left;
    clear: both;
}

.card-location {
    font-weight: 400;
    font-size: 13px;
}

.card-flat-button {
    color: #FEA737;
    font-size: 16px;
    font-weight: 400;
}

.card-body {
    /*margin-top: 1rem;*/
    margin-bottom: 1rem;
}

.card-icon-button {
    width: 26px;
    height: 26px;
}

.card-body-title {
    margin-bottom: 0.5rem;
    line-height: 48px;
    font-weight: 400;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    color: #3F51B5;
    font-size: 20px;
}

.card-body-text {
    font-weight: 400;
    display: block;
    font-size: 15px;
    line-height: 1.6;
}

.card-footer {
    position: relative;
    padding-bottom: 5px;
}

.card-footer-contact {
    position: absolute;
    right: 0px;
}

.card-footer-contact-info {
    margin-left: 0.3rem;
}

.card-footer-contact-info a {
    text-decoration: none;
}

.horizontal-separator {
    margin-left: 0.5rem;
    margin-right: 0.5rem;
}

.material-avatar {
    vertical-align: middle;
    width: 24px;
    height: 24px;
    margin-right: 16px;
    border-radius: 50%;
    box-sizing: content-box;
    padding: 6px;
    background-color: rgba(240, 240, 240, 0.21);
    border: 2px solid #FFF;
    box-shadow: 0 0 1px #888;
}

.sticky-container {
    background-color: white !important;
}

.dialog-company-element {
    max-width: 100%;
    max-height: 100%;
}

.dialog-company {
    margin: 1rem 0rem 1rem 1rem;
}

.dialog-company-header {
    position: relative;
    vertical-align: middle;
}

.dialog-company-header-avatar {
    display: inline-block;
    float: left;
}

.dialog-company-header-info {
    display: inline-block;
    margin-top: 1px;
}

.dialog-company-name {
    font-size: 15px;
    font-weight: 500;
    color: #575757;
    float: left;
    clear: both;
}

.dialog-company-website {
    font-weight: 400;
    font-size: 13px;
    margin-bottom: 1.5rem;
    float: left;
    clear: both;
}

.dialog-company-info-prefix {
    font-weight: 500;
    font-size: 14px;
}

.dialog-company-location, .dialog-company-numbers, .dialog-company-contact-info {
    font-weight: 400;
    font-size: 14px;
}

.dialog-company-additional-info {
    margin-bottom: 1rem;
}

.dialog-company-description {
    margin: 0 0 2rem 1rem;
}

.separator {
    margin-left: 1rem;
    margin-right: 1rem;
}

/*.dialog-company-header-numbers {*/
/*display: inline-block;*/
/*vertical-align: top;*/
/*margin-right: 1rem;*/
/*}*/

.dialog-container-company {
    width: 44%;
    max-height: 90%;
    height: 90%;
}

@media screen and (max-width: 960px) {
    .dialog-container-company {
        width: 80%;
    }
}

.hideContent {
    overflow: hidden;
    line-height: 1em;
    height: 2em;
}

.showContent {
    line-height: 1em;
    height: auto;
}

.showContent {
    height: auto;
}

.show-more {
    padding: 10px 0;
    text-align: center;
}

.dialog-company-map {
    width: 100%;
    height: 100%;
    max-height: 230px;
    object-fit: cover;
}

.mailto-link {
    text-decoration: none;
}

.ngTruncateToggleText {
    margin-left: 8px;
    font-weight: bolder;
    color: #3F51B5;
}

.note-icon {
    font-size: 18px !important;
}
.note-on-list {
    color: #FF9800;
}

/*.dialogdemoBasicUsage .dialogDemo1 {*/
/*height: 500px; }*/
/*.dialogdemoBasicUsage .full {*/
/*width: 100%;*/
/*height: 100%; }*/
/*.dialogdemoBasicUsage .gap {*/
/*width: 50px; }*/
/*.dialogdemoBasicUsage md-dialog md-content.sticky-container {*/
/*padding: 0; }*/
/*.dialogdemoBasicUsage md-dialog md-content.sticky-container .dialog-content {*/
/*padding: 0 24px 24px; }*/
/*.dialogdemoBasicUsage .md-subheader {*/
/*background-color: #dcedc8;*/
/*margin: 0; }*/
/*.dialogdemoBasicUsage h2.md-subheader.md-sticky-clone {*/
/*margin-right: 0;*/
/*margin-top: 0;*/
/*box-shadow: 0px 2px 4px 0 rgba(0, 0, 0, 0.16); }*/
/*.dialogdemoBasicUsage h2 .md-subheader-content {*/
/*padding-left: 10px; }*/

